--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intro_slider: ^3.0.9
   introduction_screen: ^3.0.1
+  local_auth: ^2.1.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
