--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   introduction_screen: ^3.0.1
   local_auth: ^2.1.1
   shared_preferences: ^2.0.15
+  fluttertoast: ^8.0.9
   http: ^0.13.5
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
