--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.0.9
   http: ^0.13.5
   curved_navigation_bar: ^1.0.3
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
