--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   curved_navigation_bar: ^1.0.3
   connectivity: ^3.0.6
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
