--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   connectivity: ^3.0.6
   url_launcher: ^6.1.5
+  # qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
