--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,13 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   connectivity: ^3.0.6
   url_launcher: ^6.1.5
-  # qr_code_scanner: ^1.0.1
+  qr_code_scanner: ^1.0.1
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
+  path: ^1.8.1
+  rxdart: ^0.27.5
+  # qr_code_tools: ^0.0.7
+  # observable: ^0.24.0
 
 dev_dependencies:
   flutter_test:
