--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   rxdart: ^0.27.5
   # qr_code_tools: ^0.0.7
   # observable: ^0.24.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
